# clipboard-tui

./: README.md  README.me  main.py  setup.cfg
.github/workflows/: publish-to-pypi.yml
