[metadata]
name = clipboard-tui
version = 1.0.0
description = TUI application for clipboard history
author = Fredrik Mile
author_email = fredrik.mile@gmail.com
url = https://github.com/mile95/notifications-tui

[options]
packages = find:
install_requires =
    pyperclip==1.8.2

[options.entry_points]
console_scripts =
	notifications-tui = notifications_tui.main:main
